--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ on: #작업을 수행하는 조건
     - cron: "*/5 * * * *"  #매 5분마다
   workflow_dispatch: #수동 실행 가능
 jobs: #실행할 작업을 정의
-  request_weather:
+  pokemon_crawl:
     runs-on: ubuntu-latest #우분투 최신환경
     steps:
       - name: 저장소 체크아웃
@@ -23,7 +23,7 @@ jobs: #실행할 작업을 정의
           pip install selenium
           sudo apt-get update
           sudo apt-get install chromium-browser -y
-          sudo apt-get install chromium-chromedriver
+          sudo apt-get install chromium-chromedriver -y
           sudo ln -s /usr/lib/chromium-browser/chromedriver /usr/bin/chromedriver
       - name: 포켓몬 정보 가져오기
         env:
